--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,3 @@
-DSN=an3y1htgf06tncag247p:pscale_pw_yspDR5mXLfuCvJ8kWgjJBhS2EP97MZp2KuosKdisF2r@tcp(aws.connect.psdb.cloud)/mysql-yeololi?tls=true&interpolateParams=true
+DSN=2v861qil608v66cp2z65:pscale_pw_I7u5Jocq8UEUfZPhGe0dDTkHC5BFuk4UrHP1l8HOxbf@tcp(aws.connect.psdb.cloud)/mysql-yeololi?tls=true&interpolateParams=true
+
+PORT=:8080
